Remastering of the views, use was made of the already installed library called Material UI

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_CLIENT_ID=
-VITE_INSTANCE_BLACKBOARD=https://migracioncolombia.blackboard.com
-VITE_REDIRECT_URL=https://certificadosmigcolombia.com/callback
-VITE_URL_API=https://www.certificadosbackmigcolombia.com/api
+VITE_CLIENT_ID=ClientID
+VITE_INSTANCE_BLACKBOARD=https://blackboard-instance-url
+VITE_REDIRECT_URL=https://frontend-url/callback
+VITE_URL_API=https://backend-url/api
