--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "ldrs": "^1.1.5",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
